# deepseek-as-subagent

./: .gitignore  README.md  curl-install.sh  install.sh  pyproject.toml  uninstall.sh
adapters/claude-code/: README.md
adapters/codex/: README.md  config.toml.example  instructions.md
commands/: ds.md
skills/delegate-to-deepseek/: SKILL.md
src/deepseek_mcp/: __init__.py  agent_loop.py  config.py  safety.py  server.py  tools.py
