[project]
name = "deepseek-as-subagent"
version = "0.0.1"
description = "Claude Code MCP server that runs DeepSeek as a real sub-agent — DeepSeek gets its own Read/Edit/Bash agent loop, not just a Q&A endpoint"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PsChina", email = "pengwei.george@gmail.com" }]
dependencies = [
    "mcp[cli]>=1.0.0",
    "openai>=1.40.0",
    "httpx[socks]>=0.27.0",  # 兼容 SOCKS 代理（科学上网环境常见）
]

[project.scripts]
deepseek-mcp = "deepseek_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepseek_mcp"]
